--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
+		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.invenza</groupId>
@@ -29,7 +29,12 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	<repositories>
+<repositories>
+  <repository>
+    <id>central</id>
+    <name>Maven Central Repository</name>
+    <url>https://repo.maven.apache.org/maven2</url>
+  </repository>
   <repository>
     <id>spring-releases</id>
     <name>Spring Releases</name>
@@ -59,8 +64,9 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-database-postgresql</artifactId>
+  		<groupId>org.flywaydb</groupId>
+  		<artifactId>flyway-database-postgresql</artifactId>
+		<version>11.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
@@ -99,6 +105,23 @@
     <groupId>org.hibernate.validator</groupId>
     <artifactId>hibernate-validator</artifactId>
   </dependency>
+		<dependency>
+ 	 <groupId>io.jsonwebtoken</groupId>
+ 	 <artifactId>jjwt-api</artifactId>
+ 	 <version>0.11.5</version>
+	</dependency>
+	<dependency>
+  <groupId>io.jsonwebtoken</groupId>
+  <artifactId>jjwt-impl</artifactId>
+  <version>0.11.5</version>
+  <scope>runtime</scope>
+	</dependency>
+	<dependency>
+  <groupId>io.jsonwebtoken</groupId>
+  <artifactId>jjwt-jackson</artifactId>
+  <version>0.11.5</version>
+  <scope>runtime</scope>
+</dependency>
 
 	</dependencies>
 
